part-2/2.04/manifests-todo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todo-app
          image: zhubao/todo-app:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /usr/src/app/files
              name: shared-image
